--- a/Fundamentals/index.html
+++ b/Fundamentals/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>CSS Grid</title>
   </head>
-  <body></body>
+  <style>
+    body {
+      background: rgb(7, 4, 46);
+      color: hotpink;
+      height: 100vh;
+    }
+    .grid-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #124;
+    }
+  </style>
+  <body>
+    <div class="grid-container">
+      <h1 class="grid-item">CSS Grids Tutorial</h1>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
