--- a/Fundamentals/grid.html
+++ b/Fundamentals/grid.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>CSS Grid</title>
+    <link rel="stylesheet" href="grid.css" />
+    <title>CSS Grid Crash Tutorial</title>
   </head>
   <style>
     body {
@@ -20,10 +20,21 @@
     }
   </style>
   <body>
-    <div class="grid-container">
-      <h1 class="grid-item">CSS Grids Tutorial</h1>
+    <div class="container">
+      <div class="item">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+        eos eius illum et, quasi libero nihil animi repudiandae tenetur itaque!
+      </div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 4</div>
+      <div class="item">Item 5</div>
+      <div class="item">Item 6</div>
+      <div class="item">Item 7</div>
+      <div class="item">Item 8</div>
+      <div class="item">Item 9</div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="grid.js"></script>
   </body>
 </html>
