--- a/Fundamentals/grid.html
+++ b/Fundamentals/grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="grid.css" />
-    <title>CSS Grid Crash Tutorial</title>
+    <title>CSS Grids Crash Tutorial</title>
   </head>
   <style>
     body {
@@ -21,10 +21,7 @@
   </style>
   <body>
     <div class="container">
-      <div class="item">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-        eos eius illum et, quasi libero nihil animi repudiandae tenetur itaque!
-      </div>
+      <div class="item">Item1</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
       <div class="item">Item 4</div>
@@ -34,7 +31,5 @@
       <div class="item">Item 8</div>
       <div class="item">Item 9</div>
     </div>
-
-    <script src="grid.js"></script>
   </body>
 </html>
